--- a/Hangman/templates/Hangman/hangman.html
+++ b/Hangman/templates/Hangman/hangman.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hangman</title>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+{% extends "Hangman/base.html" %}
+    {% block title %} Hangman {% endblock%}
+    {% block content %}
+    <div style="padding: 30px;">
 
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-  <style>
-    body{
-         padding: 30px;
-     }
-</style>
-</head>
-<body>
-    <div class="panel panel-info">
-        <div class="panel-heading">Hello</div>
-        <div class="panel-body">Thanks for visiting my site</div>
-        <!-- <div class="panel-footer">Footer</div> -->
-    </div>
-</body>
-</html>
+    <label class="primary_btn"><a href="Hangman/game.html">Start the game!!!</a></label>
+</div>
+    {% endblock %}
