--- a/Hangman/static/css/style.css
+++ b/Hangman/static/css/style.css
@@ -361,7 +361,7 @@ img {
   top: 0;
   left: 0;
   z-index: 9999;
-  background: #2c2172; }
+  background: #43f17d; }
   .header_area .navbar-brand {
     margin-right: 30px; }
   .header_area .menu_nav {
@@ -377,7 +377,7 @@ img {
       .header_area .navbar .nav .nav-item .nav-link {
         font: 500 12px/100px "Roboto", sans-serif;
         text-transform: uppercase;
-        color: #fff;
+        color: rgb(255, 255, 255);
         padding: 0px;
         display: inline-block; }
         .header_area .navbar .nav .nav-item .nav-link:after {
@@ -407,7 +407,8 @@ img {
               border: none;
               padding: 0px;
               border-radius: 0px;
-              box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.4); } }
+              /* box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.4);  */
+            } }
           .header_area .navbar .nav .nav-item.submenu ul:before {
             content: "";
             width: 0;
@@ -430,7 +431,7 @@ img {
             transition: all 0.4s linear; }
             .header_area .navbar .nav .nav-item.submenu ul .nav-item .nav-link {
               line-height: 45px;
-              color: #222222;
+              color: #43f17d;
               padding: 0px 30px;
               transition: all 150ms linear;
               display: block;
@@ -457,11 +458,12 @@ img {
     top: -70px;
     left: 0;
     right: 0;
-    background: #2c2172;
+    background: #43f17d;
     transform: translateY(70px);
-    transition: transform 500ms ease, background 500ms ease;
-    -webkit-transition: transform 500ms ease, background 500ms ease;
-    box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1); }
+    /* transition: transform 500ms ease, background 500ms ease;
+    -webkit-transition: transform 500ms ease, background 500ms ease; */
+    /* box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1); } */
+  }
     .header_area.navbar_fixed .main_menu .navbar .nav .nav-item .nav-link {
       line-height: 70px; }
   @media (min-width: 992px) {
@@ -482,7 +484,7 @@ img {
       display: none; }
   .header_area.white_menu.navbar_fixed .main_menu .navbar .nav .nav-item .nav-link {
     line-height: 70px;
-    color: #222222; }
+    color: #43f17d; }
   .header_area .navbar-right .primary_btn {
     min-width: 135px;
     text-transform: uppercase;
