--- a/Hangman/templates/Hangman/base.html
+++ b/Hangman/templates/Hangman/base.html
@@ -28,12 +28,12 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-<header class="header_area">
+<header class="header_area" style="background-color:  #7acc96de;">
     <div class="main_menu">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <a class="navbar-brand logo_h" href="#"><img src="{% static '/Hangman/img/logo.png' %}" alt=""></a>
+                <a class="navbar-brand logo_h" href="#"><img src="{% static '/Hangman/img/logo2.png' %}" width="100" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -42,11 +42,11 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav justify-content-center">
-                        <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Gallery</a>
+                        <li class="nav-item active"><a class="nav-link" href="#" style="color: #000000;">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" style="color: #0f7463;">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" style="color: #0f7463;">Gallery</a>
                         </li><li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: #0f7463;">Pages</a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item"><a class="nav-link" href="#">Hangman</a>
                                 </li><li class="nav-item"><a class="nav-link" href="#">Bones</a>
@@ -54,16 +54,16 @@
                             </li></ul>
                         </li>
                         <li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: #0f7463;">Blog</a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Blog Details</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" style="color: #0f7463;">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="nav-item"><a href="#" class="primary_btn">join us</a></li>
+                        <li class="nav-item"><a href="#" class="primary_btn" >join us</a></li>
                     </ul>
                 </div>
             </div>
