--- a/Hangman/templates/Hangman/base.html
+++ b/Hangman/templates/Hangman/base.html
@@ -42,8 +42,9 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav justify-content-center">
-                        <li class="nav-item active"><a class="nav-link" href="#" style="color: #000000;">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#" style="color: #0f7463;">About</a></li>
+                        {% block home %} <li class="nav-item active"><a class="nav-link" href="" style="color: #000000;">Home</a></li> {% endblock %}
+                        {% block hangman %} <li class="nav-item"><a class="nav-link" href="hangman" style="color: #0f7463;">Hangman</a></li>{% endblock %}
+                        
                         <li class="nav-item"><a class="nav-link" href="#" style="color: #0f7463;">Gallery</a>
                         </li><li class="nav-item submenu dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: #0f7463;">Pages</a>
@@ -70,11 +71,92 @@
         </nav>
     </div>
 </header>
+<!-- <br>
 <br>
 <br>
-<br>
-<br>
+<br> -->
 {% block content %} {% endblock %}
-
+<footer class="footer_area section_gap_top" style="background:  #457455a1;">
+    <div class="container">
+        <div class="row footer_inner">
+            <div class="col-lg-3 col-sm-6">
+                <aside class="f_widget ab_widget">
+                    <div class="f_title">
+                        <h4>About MiniGames</h4>
+                    </div>
+                    <ul>
+                        <!-- <li><a href="#"></a>For Business</li><a href="#"> -->
+                            <!-- </a><li><a href="#"></a><a href="#"></a>Premium Plans -->
+                        </li>
+                        <li><a href="#"></a>Reviews</li>
+                        <li><a href="#"></a>How it Works</li>
+                        <li><a href="#"></a>MiniGames Blog</li>
+                    </ul>
+                </aside>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <aside class="f_widget ab_widget">
+                    <div class="f_title">
+                        <h4>Company</h4>
+                    </div>
+                    <ul>
+                        <!-- <li><a href="#"></a>Product Tour</li><a href="#"> -->
+                            </a><li><a href="#"></a><a href="#"></a>Pricing
+                        </li>
+                        <li><a href="#"></a>Founding Members</li>
+                        <!-- <li><a href="#"></a>Case Studies</li> -->
+                        <li><a href="#"></a>Product Updates</li>
+                    </ul>
+                </aside>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <aside class="f_widget ab_widget">
+                    <div class="f_title">
+                        <h4>Support</h4>
+                    </div>
+                    <ul>
+                        <li><a href="#"></a>Documentation</li><a href="#">
+                            <!-- </a><li><a href="#"></a><a href="#"></a>Data Securiry -->
+                        </li>
+                        <!-- <li><a href="#"></a>Site Performance</li> -->
+                        <li><a href="#"></a>Action Plan</li>
+                        <li><a href="#"></a>Resources</li>
+                    </ul>
+                </aside>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <aside class="f_widget ab_widget">
+                    <div class="f_title">
+                        <h4>Legal</h4>
+                    </div>
+                    <ul>
+                        <li><a href="#"></a>Terms and conditions</li><a href="#">
+                            </a><li><a href="#"></a><a href="#"></a>Privacy Policy
+                        </li>
+                        <li><a href="#"></a>Cookie Information</li>
+                        <!-- <li><a href="#"></a>Opt - Out</li> -->
+                    </ul>
+                </aside>
+            </div>
+        </div>
+        <div class="row single-footer-widget">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <div class="copy_right_text">
+                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright ©<script>document.write(new Date().getFullYear());</script>2020 All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" style="color: #0f6074;">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <div class="social_widget">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-dribbble"></i></a>
+                    <a href="#"><i class="fa fa-behance"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
