--- a/Hangman/templates/Hangman/hangman.html
+++ b/Hangman/templates/Hangman/hangman.html
@@ -1,8 +1,21 @@
 {% extends "Hangman/base.html" %}
+{% load static %}
     {% block title %} Hangman {% endblock%}
+    {% block home %} <li class="nav-item active"><a class="nav-link" href="../" style="color: #0f7463;">Home</a></li> {% endblock %}
+    {% block hangman %} <li class="nav-item"><a class="nav-link" href="#" style="color: #000000">Hangman</a></li>{% endblock %}
     {% block content %}
-    <div style="padding: 30px;">
-
+    <div class="home_banner_area" style="padding: 100px;">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     <label class="primary_btn"><a href="Hangman/game.html">Start the game!!!</a></label>
-</div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    </div>
+    
     {% endblock %}
