--- a/Hangman/templates/Hangman/base.html
+++ b/Hangman/templates/Hangman/base.html
@@ -43,7 +43,7 @@
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav justify-content-center">
                         {% block home %} <li class="nav-item active"><a class="nav-link" href="" style="color: #000000;">Home</a></li> {% endblock %}
-                        {% block hangman %} <li class="nav-item"><a class="nav-link" href="hangman" style="color: #0f7463;">Hangman</a></li>{% endblock %}
+                        {% block hangman %} <li class="nav-item"><a class="nav-link" href="../hangman" style="color: #0f7463;">Hangman</a></li>{% endblock %}
                         
                         <li class="nav-item"><a class="nav-link" href="#" style="color: #0f7463;">Gallery</a>
                         </li><li class="nav-item submenu dropdown">
