--- a/Hangman/templates/Hangman/hangman.html
+++ b/Hangman/templates/Hangman/hangman.html
@@ -10,12 +10,13 @@
         <br>
         <br>
         <br>
-    <label class="primary_btn"><a href="Hangman/game.html">Start the game!!!</a></label>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+        <div align="center">
+        <label class="primary_btn" style="width: 500px; font-size: 30px; "><a  style="color:black;" href="../hangman/game">Start the game!!!</a></label>
+    </div>
+        <br>
+        <br>
+        <br>
+        
     </div>
     
     {% endblock %}
