--- a/Hangman/templates/Hangman/base.html
+++ b/Hangman/templates/Hangman/base.html
@@ -44,8 +44,7 @@
                     <ul class="nav navbar-nav menu_nav justify-content-center">
                         {% block home %} <li class="nav-item active"><a class="nav-link" href="" style="color: #000000;">Home</a></li> {% endblock %}
                         {% block hangman %} <li class="nav-item"><a class="nav-link" href="../hangman" style="color: #0f7463;">Hangman</a></li>{% endblock %}
-                        
-                        <li class="nav-item"><a class="nav-link" href="#" style="color: #0f7463;">Gallery</a>
+                        {% block bones %}<li class="nav-item"><a class="nav-link" href="../bones" style="color: #0f7463;">Bones</a>{% endblock %}
                         </li><li class="nav-item submenu dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: #0f7463;">Pages</a>
                             <ul class="dropdown-menu">
